--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,8 +3,12 @@ layout: default
 ---
 
 <div class="home">
+  <div class="post-content">
 
-  <h1 class="page-heading">Docs</h1>
+  <h1 class="page-heading">@Pay API Reference</h1>
 
-
+  <p>
+    @Pay offers a suite of tools that developers can use to integrate our 2-click payment platform with any application. With the implementation of our v4 APIs, your organization can create offers, send invoices, register payment methods, receive transaction information & more!
+  </p>
+</div>
 </div>
