--- a/assets/all.scss
+++ b/assets/all.scss
@@ -100,6 +100,8 @@ h2{
 
 .post-content{
   h2{margin-top:20px;}
+  p{width: 80%;
+  margin-bottom: 20px;}
 }
 
 #sidebar{
@@ -341,7 +343,7 @@ table.time th {background-color: #77A7B9 !important; color: #fff !important; pad
   text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.4);
   font-size: 12px;
   line-height: 1.5;
-  width: 90%;
+  width: 80%;
   overflow: scroll;
   padding:20px;
 }
