--- a/_layouts/auth.html
+++ b/_layouts/auth.html
@@ -22,16 +22,19 @@
 
 
   <body>
+    <div class='wrapper'>
     <div id="header">
       <h1 class="logo" style="float:left;">
-        <span>
-          @Pay Instant Button Auth
+        <span class='docs_title'>
+          <img src='/assets/img/logo.png'/>
+          Docs
         </span>
       </h1>
       <h1 class="logo" style="float:right; text-align: right; padding-right:40px;font-size:30px; font-style: italic;">
         <span>v5</span>
       </h1>
     </div>
+
     <div id="body">
       <div id="sidebar">
         <div class="content">
@@ -46,5 +49,7 @@
       <div class="clear"></div>
     </div>
     <div id="footer"></div>
+  </div>
+
   </body>
 </html>
