--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
 
 
   <body>
+    <div class='wrapper'>
     <div id="header">
       <h1 class="logo" style="float:left;">
         <span>
@@ -46,5 +47,6 @@
       <div class="clear"></div>
     </div>
     <div id="footer"></div>
+    </div>
   </body>
 </html>
