--- a/assets/all.scss
+++ b/assets/all.scss
@@ -3,6 +3,9 @@
 ---
 @charset "utf-8";
 
+
+img{max-width: 95%;}
+
 *{
   margin: 0;
   padding: 0;
@@ -36,6 +39,7 @@ html{
 body {
  font-family: sans-serif;
  height: 100%;
+ background-image: url('img/blueback-1.png');
 }
 
 .clear{clear:both;}
@@ -45,20 +49,15 @@ body {
   box-shadow: 0 0px 3px rgba(0, 0, 2, 0.6);
   -moz-box-shadow: 0 0px 3px rgba(0, 0, 2, 0.6);
   -webkit-box-shadow: 0 0px 3px rgba(0, 0, 2, 0.6);
-  height: 60px;
-  top: 0;
-  position: fixed;
-  z-index: 999999;
   font-size: 8px;
   color: #fff;
   background: transparent linear-gradient(145deg, #00022e 0%, #1280a8 61%, #00a6a6 100%) no-repeat fixed 0% 0%;
 
 
-
   h1.logo{
     padding-left: 20px;
     line-height: 60px;
-    font-weight: bold;
+    font-weight: normal;
     span {color: #ffffff !important;}
     img{
       margin-top:10px;
@@ -70,7 +69,7 @@ body {
 }
 
 #body{
-  height: 100%;
+  clear: both;
 }
 
 
@@ -78,23 +77,26 @@ h2{
   font-size: 1.5em;
 }
 
-.content{
-  padding-top: 60px;
+.wrapper{
+  max-width: 1100px;
+  width: 95%;
+  margin: 0 auto;
 }
 
 
 #content{
+  background-color: #ffffff;
   box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, .1);
-  height:100%;
   overflow-y: scroll;
   width:80%;
   float: left;
-
+  border-radius: 0px 10px 10px 10px;
+  min-height: 1000px;
   .content{
     width:90%;
     margin: 0 auto;
     overflow-y: scroll;
-    padding-top: 100px;
+    padding: 20px 40px 50px;
   }
 }
 
@@ -105,35 +107,38 @@ h2{
 }
 
 #sidebar{
+  border-radius: 10px 0px 0px 10px;
   background: transparent linear-gradient(145deg, #00022e 0%, #1280a8 61%, #00a6a6 100%) no-repeat fixed 0% 0%;
   float:left;
-  width:20%;
-  min-height: 250px;
-  height:100%;
+  width: 20%;
+  min-height: 350px;
   overflow-y: scroll;
-  font-size:18px;
+  font-size: 18px;
 
   .content{
     width:90%;
-    margin: 50px auto;
+    margin: 20px;
   }
 }
 
 ul#main_nav{
   font-family: "Lato";
-  font-weight: normal;
+  font-weight: bold;
   font-family: sans-serif;
-  font-size:14px;
+  font-size:13px;
+
   ul li {
     font-weight: normal;
     font-family: sans-serif;
-    font-size:14px;
+    font-size:13px;
+    ul li{
+      font-size: 13px;
+    }
   }
   li{list-style:none;
     line-height:30px;
     font-weight: normal;
     color: #ffffff;
-
   }
 
   ul{padding-left:10px; margin-bottom: 0px;}
